Replace missing measurement view
Remove missing/expected members in LogicalMeter and friends, and
replace with precalculated collectionPercentage.

Remove missing/expected text from collection percentage widget.